Added social and email

--- a/index.html
+++ b/index.html
@@ -33,9 +33,18 @@
 
                     <div class="card-hover bg-white">
                         <div class="card-body align-self-center">
-                            <a class="btn btn-label btn-success text-white" href="mailto:info@eighstorm.com">
+                            <a class="btn btn-label btn-success text-white" href="mailto:support@eighstorm.com">
                                 <label><i class="fa fa-envelope"></i></label> Contact Customer Service
                             </a>
+                            <br><br>
+                            <p>
+                                <a href="https://www.facebook.com/eightstormcasino/"><span class="iconbox text-danger bg-secondary">
+                                        <i class="fa fa-facebook"></i>
+                                    </span></a>
+                                <a href="https://www.instagram.com/eightstormcasino"><span class="iconbox text-danger bg-secondary">
+                                        <i class="fa fa-instagram"></i>
+                                    </span></a>
+                            </p>
                         </div>
                     </div>
                     <p></p>
@@ -50,6 +59,4 @@
     <script src="assets/js/page.min.js"></script>
     <script src="assets/js/script.js"></script>
 
-</body>
-
-</html>
+</body></html>
