--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
                     <p></p>
                     <div class="card-body">
                         <h3 class="card-title">Welcome to EightStorm Crypto-Casino!</h3>
+                        <p>::CLIENT_IP::</p>
+                        <p>::RAY_ID::</p>
+                        <p>::GEO::</p>
                         <p class="lead">Unfortunately, your current IP Address indicates your geolocation is a restricted jurisdiction. </p>
                         <p>As such, we are unable to offer you an entertainment experience on the platform. </p>
                         <p>If you believe this is an error, please contact customer service. </p>
@@ -59,4 +62,6 @@
     <script src="assets/js/page.min.js"></script>
     <script src="assets/js/script.js"></script>
 
-</body></html>
+</body>
+
+</html>
