--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <title>EightStorm Not Available in Your Region</title>
 
     <!-- Styles -->
-    <link href="assets/css/page.min.css" rel="stylesheet">
-    <link href="assets/css/style.css" rel="stylesheet">
+    <link href="https://unavailable.eightstorm.com/assets/css/page.min.css" rel="stylesheet">
+    <link href="https://unavailable.eightstorm.com/assets/css/style.css" rel="stylesheet">
 </head>
 
-<body class="layout-centered bg-gray" style="background-image: url(assets/img/es-bg-transp.jpg)">
+<body class="layout-centered bg-gray" style="background-image: url(https://unavailable.eightstorm.com/assets/img/es-bg-transp.jpg)">
 
 
     <!-- Main Content -->
