--- a/index.html
+++ b/index.html
@@ -1,44 +1,61 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
-    <title> My 1XXX Level Custom Error page</title>
-    <style type="text/css">
-        html,
-        body {
-            background: black;
-            color: white;
-            text-align: center;
-        }
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="keywords" content="">
 
-        h1 {
-            color: red;
-            font-size: 22px;
-        }
+    <title>EightStorm Not Available in Your Region</title>
 
-        h2 {
-            color: blue;
-        }
-
-        p {
-            font-size: 16px;
-            color: orange;
-        }
-
-        small {
-            font-size: 10px;
-            color: #2eadee;
-        }
-
-    </style>
+    <!-- Styles -->
+    <link href="https://unavailable.eightstorm.com/assets/css/page.min.css" rel="stylesheet">
+    <link href="https://unavailable.eightstorm.com/assets/css/style.css" rel="stylesheet">
 </head>
 
-<body>
-    <h1> Dear Visitor, this is an 1XXX example for Custom Level Errors page</h1>
-    <h2>::CLOUDFLARE_ERROR_1000S_BOX::</h2>
-    <p> You can add a stylesheet CSS for more colors, etc. </p>
-    <small> This is an example </small>
+<body class="layout-centered bg-gray" style="background-image: url(https://i.ibb.co/hdNS3J6/es-bg-transp.jpg)">
+
+    <!-- Main Content -->
+    <main class="main-content text-center pb-lg-8">
+
+        <div class="container">
+            <div class="col-md-6 col-lg mx-auto">
+                <div class="card">
+                    <p></p>
+                    <div class="card-body">
+                        <h3 class="card-title">Welcome to EightStorm Crypto-Casino!</h3>
+                        <p>::CLIENT_IP::</p>
+                        <p>::RAY_ID::</p>
+                        <p>::CLOUDFLARE_ERROR_1000S_BOX::</p>
+                        <p class="lead">Unfortunately, your current IP Address indicates your geolocation is a restricted jurisdiction. </p>
+                        <p>As such, we are unable to offer you an entertainment experience on the platform. </p>
+                        <p>If you believe this is an error, please contact customer service. </p>
+                    </div>
+
+                    <div class="card-hover bg-white">
+                        <div class="card-body align-self-center">
+                            <a class="btn btn-label btn-success text-white" href="mailto:support@eighstorm.com">
+                                <label><i class="fa fa-envelope"></i></label> Contact Customer Service
+                            </a>
+                            <br><br>
+                            <p>
+                                <a href="https://www.facebook.com/eightstormcasino/"><span class="iconbox text-danger bg-secondary">
+                                        <i class="fa fa-facebook"></i>
+                                    </span></a>
+                                <a href="https://www.instagram.com/eightstormcasino"><span class="iconbox text-danger bg-secondary">
+                                        <i class="fa fa-instagram"></i>
+                                    </span></a>
+                            </p>
+                        </div>
+                    </div>
+                    <p></p>
+                </div>
+            </div>
+
+        </div>
+    </main><!-- /.main-content -->
+
 </body>
 
 </html>
