--- a/index.html
+++ b/index.html
@@ -3,18 +3,282 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
-
     <title>EightStorm Not Available in Your Region</title>
 
     <!-- Styles -->
-    <link href="https://unavailable.eightstorm.com/assets/css/page.min.css" rel="stylesheet">
-    <link href="https://unavailable.eightstorm.com/assets/css/style.css" rel="stylesheet">
+    <style>
+        element.style {}
+
+        .layout-centered .main-content {
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+        }
+
+        .card-body {
+            flex: 1 1 auto;
+            min-height: 1px;
+            padding: 1.25rem;
+        }
+
+        .main-content {
+            flex-grow: 1;
+        }
+
+        .text-center {
+            text-align: center !important;
+        }
+
+        article,
+        aside,
+        figcaption,
+        figure,
+        footer,
+        header,
+        hgroup,
+        main,
+        nav,
+        section {
+            display: block;
+        }
+
+        card-hover {
+            display: flex;
+            flex: 1 1 auto;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border-radius: inherit;
+            overflow: hidden;
+            visibility: hidden;
+            opacity: 0;
+        }
+
+        *,
+        *::before,
+        *::after {
+            box-sizing: border-box;
+        }
+
+        user agent stylesheet main {
+            display: block;
+        }
+
+        body {
+            margin: 0;
+            font-family: "Open Sans", sans-serif;
+            font-size: .9375rem;
+            font-weight: 300;
+            line-height: 1.9;
+            color: #757575;
+            text-align: left;
+            background-color: #fff;
+        }
+
+        :root {
+            --blue: #49D575;
+            --indigo: #6610f2;
+            --purple: #926dde;
+            --pink: #e83e8c;
+            --red: #ff4954;
+            --orange: #ffbe00;
+            --yellow: #ffba00;
+            --green: #3cd458;
+            --teal: #20c997;
+            --cyan: #17a2b8;
+            --white: #fff;
+            --gray: #868e96;
+            --gray-dark: #343a40;
+            --primary: #49D575;
+            --secondary: #e9ecf0;
+            --success: #3cd458;
+            --info: #926dde;
+            --warning: #ffba00;
+            --danger: #ff4954;
+            --light: #f8f9fa;
+            --dark: #191919;
+            --breakpoint-xs: 0;
+            --breakpoint-sm: 576px;
+            --breakpoint-md: 768px;
+            --breakpoint-lg: 992px;
+            --breakpoint-xl: 1200px;
+            --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Open Sans Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+            --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+        }
+
+        @media (max-width: 767.98px) html {
+            font-size: .87891rem;
+        }
+
+        html {
+            font-family: sans-serif;
+            line-height: 1.15;
+            -webkit-text-size-adjust: 100%;
+            -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+        }
+
+        *,
+        *::before,
+        *::after {
+            box-sizing: border-box;
+        }
+
+        *,
+        *::before,
+        *::after {
+            box-sizing: border-box;
+        }
+
+        ::selection {
+            background: #74b4ff;
+            color: #fff;
+        }
+
+        .card {
+            border: 0;
+            transition: .5s;
+        }
+
+        .card {
+            position: relative;
+            display: flex;
+            flex-direction: column;
+            min-width: 0;
+            word-wrap: break-word;
+            background-color: #fff;
+            background-clip: border-box;
+            border: 0 solid rgba(0, 0, 0, 0.125);
+            border-radius: 0.25rem;
+
+            .ml-auto,
+            .mx-auto {
+                margin-left: auto !important;
+            }
+
+            .mr-auto,
+            .mx-auto {
+                margin-right: auto !important;
+            }
+
+            @media (min-width: 992px) .col-lg {
+                flex-basis: 0;
+                flex-grow: 1;
+                max-width: 100%;
+            }
+
+            @media (min-width: 768px) .col-md-6 {
+                flex: 0 0 50%;
+                max-width: 50%;
+            }
+
+            .col-1,
+            .col-2,
+            .col-3,
+            .col-4,
+            .col-5,
+            .col-6,
+            .col-7,
+            .col-8,
+            .col-9,
+            .col-10,
+            .col-11,
+            .col-12,
+            .col,
+            .col-auto,
+            .col-sm-1,
+            .col-sm-2,
+            .col-sm-3,
+            .col-sm-4,
+            .col-sm-5,
+            .col-sm-6,
+            .col-sm-7,
+            .col-sm-8,
+            .col-sm-9,
+            .col-sm-10,
+            .col-sm-11,
+            .col-sm-12,
+            .col-sm,
+            .col-sm-auto,
+            .col-md-1,
+            .col-md-2,
+            .col-md-3,
+            .col-md-4,
+            .col-md-5,
+            .col-md-6,
+            .col-md-7,
+            .col-md-8,
+            .col-md-9,
+            .col-md-10,
+            .col-md-11,
+            .col-md-12,
+            .col-md,
+            .col-md-auto,
+            .col-lg-1,
+            .col-lg-2,
+            .col-lg-3,
+            .col-lg-4,
+            .col-lg-5,
+            .col-lg-6,
+            .col-lg-7,
+            .col-lg-8,
+            .col-lg-9,
+            .col-lg-10,
+            .col-lg-11,
+            .col-lg-12,
+            .col-lg,
+            .col-lg-auto,
+            .col-xl-1,
+            .col-xl-2,
+            .col-xl-3,
+            .col-xl-4,
+            .col-xl-5,
+            .col-xl-6,
+            .col-xl-7,
+            .col-xl-8,
+            .col-xl-9,
+            .col-xl-10,
+            .col-xl-11,
+            .col-xl-12,
+            .col-xl,
+            .col-xl-auto {
+                position: relative;
+                width: 100%;
+                padding-right: 15px;
+                padding-left: 15px;
+            }
+
+            *,
+            *::before,
+            *::after {
+                box-sizing: border-box;
+            }
+
+            user agent stylesheet div {
+                display: block;
+            }
+
+            .text-center {
+                text-align: center !important;
+            }
+
+            body {
+                margin: 0;
+                font-family: "Open Sans", sans-serif;
+                font-size: .9375rem;
+                font-weight: 300;
+                line-height: 1.9;
+                color: #757575;
+                text-align: left;
+                background-color: #fff;
+            }
+    </style>
+    <!--    <link href="https://unavailable.eightstorm.com/assets/css/page.min.css" rel="stylesheet">-->
+    <!--    <link href="https://unavailable.eightstorm.com/assets/css/style.css" rel="stylesheet">-->
 </head>
 
-<body class="layout-centered bg-gray" style="background-image: url(https://i.ibb.co/hdNS3J6/es-bg-transp.jpg)">
+<body class="layout-centered bg-gray" style="background-image: url(https://unavailable.eightstorm.com/assets/img/es-bg-transp.jpg)">
 
     <!-- Main Content -->
     <main class="main-content text-center pb-lg-8">
@@ -56,6 +320,4 @@
         </div>
     </main><!-- /.main-content -->
 
-</body>
-
-</html>
+</body></html>
