--- a/index.html
+++ b/index.html
@@ -273,12 +273,11 @@
                 text-align: left;
                 background-color: #fff;
             }
+
     </style>
-    <!--    <link href="https://unavailable.eightstorm.com/assets/css/page.min.css" rel="stylesheet">-->
-    <!--    <link href="https://unavailable.eightstorm.com/assets/css/style.css" rel="stylesheet">-->
 </head>
 
-<body class="layout-centered bg-gray" style="background-image: url(https://unavailable.eightstorm.com/assets/img/es-bg-transp.jpg)">
+<body class="layout-centered bg-gray" style="background-image: url(https://iili.io/M9ImXt.md.jpg)">
 
     <!-- Main Content -->
     <main class="main-content text-center pb-lg-8">
@@ -320,4 +319,6 @@
         </div>
     </main><!-- /.main-content -->
 
-</body></html>
+</body>
+
+</html>
