--- a/index-test.html
+++ b/index-test.html
@@ -7,38 +7,48 @@
     <style type="text/css">
         html,
         body {
-            background: black;
-            color: white;
-            text-align: center;
+            margin: 0;
+            font-family: sans-serif;
+            font-size: .9375rem;
+            font-weight: 300;
+            line-height: 1.9;
+            color: #757575;
+            background-color: #fff;
         }
 
         h1 {
-            color: red;
+            color: gray;
             font-size: 22px;
         }
 
         h2 {
-            color: blue;
+            color: gray;
+        }
+
+        h3 {
+            color: gray;
         }
 
         p {
             font-size: 16px;
-            color: orange;
+            color: gray;
         }
 
         small {
             font-size: 10px;
-            color: #2eadee;
+            color: gray;
         }
-
     </style>
 </head>
 
-<body>
-    <h1> Dear Visitor, this is an 1XXX example for Custom Level Errors page</h1>
-    <h2>::CLOUDFLARE_ERROR_1000S_BOX::</h2>
-    <p> You can add a stylesheet CSS for more colors, etc. </p>
-    <small> This is an example </small>
-</body>
-
-</html>
+<body style="background-image: url(https://iili.io/M9ImXt.md.jpg)">
+    <div style="background-color: white; vertical-align: middle; text-align: center;">
+        <h3>Welcome to EightStorm Crypto-Casino!</h3>
+        <p>::CLIENT_IP::</p>
+        <p>::RAY_ID::</p>
+        <p>::CLOUDFLARE_ERROR_1000S_BOX::</p>
+        <p class="lead">Unfortunately, your current IP Address indicates your geolocation is a restricted jurisdiction. </p>
+        <p>As such, we are unable to offer you an entertainment experience on the platform. </p>
+        <p>If you believe this is an error, please contact customer service. </p>
+    </div>
+</body></html>
