--- a/index-test.html
+++ b/index-test.html
@@ -35,20 +35,25 @@
         }
 
         small {
-            font-size: 10px;
+            font-size: 8px;
             color: gray;
         }
     </style>
 </head>
 
-<body style="background-image: url(https://iili.io/M9ImXt.md.jpg)">
-    <div style="background-color: white; vertical-align: middle; text-align: center;">
-        <h3>Welcome to EightStorm Crypto-Casino!</h3>
-        <p>::CLIENT_IP::</p>
-        <p>::RAY_ID::</p>
-        <p>::CLOUDFLARE_ERROR_1000S_BOX::</p>
-        <p class="lead">Unfortunately, your current IP Address indicates your geolocation is a restricted jurisdiction. </p>
-        <p>As such, we are unable to offer you an entertainment experience on the platform. </p>
-        <p>If you believe this is an error, please contact customer service. </p>
+<body>
+    <div style="background-color: white; background-image: url(https://iili.io/M9ImXt.md.jpg); vertical-align: middle; text-align: center;">
+        <div style="background-color: white;">
+            <h3>Welcome to EightStorm Crypto-Casino!</h3>
+            <p class="lead">Unfortunately, your current IP Address indicates your geolocation is a restricted jurisdiction. </p>
+            <p>As such, we are unable to offer you an entertainment experience on the platform. </p>
+            <p>If you believe this is an error, please contact customer service. </p>
+            <table style="align-self: center; vertical-align: middle;">
+                <tr>
+                    <p style="text-align: left;"><small>::CLOUDFLARE_ERROR_1000S_BOX::</small></p>
+                </tr>
+            </table>
+
+        </div>
     </div>
 </body></html>
