--- a/index-test.html
+++ b/index-test.html
@@ -38,7 +38,7 @@
         }
 
         small {
-            font-size: 8px;
+            font-size: 7px;
             color: gray;
         }
 
@@ -87,29 +87,35 @@
 </head>
 
 <body>
+    <div style="align-items: center; align-self: center;">
+        <br>
+        <br>
+        <br>
+        <table width="50%" align="center" v-align="middle" style="background-color: #fff; text-align: center; vertical-align: middle;">
+            <thead>
+                <tr>
+                    <th class="tg-oe15">
+                        <h3>Welcome to EightStorm Crypto-Casino!</h3>
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td class="tg-oe15">
+                        <p class="lead">Unfortunately, your current IP Address indicates your geolocation is a restricted jurisdiction. </p>
+                        <p>As such, we are unable to offer you an entertainment experience on the platform. </p>
+                        <p>If you believe this is an error, please contact <a href="mailto:support@eightstorm.com">customer service</a>. </p>
+                        <p><img>&nbsp;&nbsp;<img></p>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="tg-oe15">
+                        <p style="text-align: center;"><small>::CLOUDFLARE_ERROR_1000S_BOX::</small></p>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 
-    <table class="Absolute-Center">
-        <thead>
-            <tr>
-                <th class="tg-oe15">
-                    <h3>Welcome to EightStorm Crypto-Casino!</h3>
-                </th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td class="tg-oe15">
-                    <p class="lead">Unfortunately, your current IP Address indicates your geolocation is a restricted jurisdiction. </p>
-                    <p>As such, we are unable to offer you an entertainment experience on the platform. </p>
-                    <p>If you believe this is an error, please contact customer service. </p>
-                </td>
-            </tr>
-            <tr>
-                <td class="tg-oe15">
-                    <p style="text-align: left;"><small>::CLOUDFLARE_ERROR_1000S_BOX::</small></p>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-
+    </html>
 </body></html>
