--- a/index-test.html
+++ b/index-test.html
@@ -41,6 +41,7 @@
             font-size: 7px;
             color: gray;
         }
+
     </style>
 </head>
 
@@ -63,7 +64,9 @@
                         <p class="lead">Unfortunately, your current IP Address indicates your geolocation is a restricted jurisdiction. </p>
                         <p>As such, we are unable to offer you an entertainment experience on the platform. </p>
                         <p>If you believe this is an error, please contact <a href="mailto:support@eightstorm.com">customer service</a>. </p>
-                        <p><img>&nbsp;&nbsp;<img></p>
+                        <p><a href="https://www.facebook.com/eightstormcasino"><img src="https://unavailable.globalodds.com/assets/img/fb.jpeg"></a>&nbsp;&nbsp;
+                            <a href="https://www.instagram.com/eightstormcasino"><img src="https://unavailable.globalodds.com/assets/img/ib.jpeg"></a>
+                        </p>
                     </td>
                 </tr>
                 <tr>
@@ -74,4 +77,6 @@
             </tbody>
         </table>
     </div>
-</body></html>
+</body>
+
+</html>
