--- a/index.html
+++ b/index.html
@@ -309,6 +309,9 @@
                                 <a href="https://www.instagram.com/eightstormcasino"><span class="iconbox text-danger bg-secondary">
                                         <i class="fa fa-instagram"></i>
                                     </span></a>
+                                 <a href="https://discord.gg/VcrXBJ59Az"><span class="iconbox text-danger bg-secondary">
+                                        <i class="fa fa-discord"></i>
+                                    </span></a>
                             </p>
                         </div>
                     </div>
