--- a/index-test.html
+++ b/index-test.html
@@ -65,7 +65,10 @@
                         <p>As such, we are unable to offer you an entertainment experience on the platform. </p>
                         <p>If you believe this is an error, please contact <a href="mailto:support@eightstorm.com">customer service</a>. </p>
                         <p><a href="https://www.facebook.com/eightstormcasino"><img src="https://unavailable.globalodds.com/assets/img/fb.jpeg"></a>&nbsp;&nbsp;
+
                             <a href="https://www.instagram.com/eightstormcasino"><img src="https://unavailable.globalodds.com/assets/img/ib.jpeg"></a>
+                            
+                             <a href="https://www.instagram.com/eightstormcasino"><img src="https://unavailable.globalodds.com/assets/img/ib.jpeg"></a>
                         </p>
                     </td>
                 </tr>
