Added assets and updated code.

--- a/index-test.html
+++ b/index-test.html
@@ -68,7 +68,7 @@
 
                             <a href="https://www.instagram.com/eightstormcasino"><img src="https://unavailable.globalodds.com/assets/img/ib.jpeg"></a>
                             
-                             <a href="https://www.instagram.com/eightstormcasino"><img src="https://unavailable.globalodds.com/assets/img/ib.jpeg"></a>
+                             <a href="https://www.instagram.com/eightstormcasino"><img src="assets/img/ib.jpeg"></a>
                         </p>
                     </td>
                 </tr>
