--- a/index-test.html
+++ b/index-test.html
@@ -14,7 +14,7 @@
             line-height: 1.9;
             color: #757575;
             background-color: #fff;
-            background-image: url(https://unavailable.eightstorm.com//assets/img/es-bg-transp.jpg);
+            background-image: url(assets/img/es-bg-transp.jpg);
 
             background-repeat: repeat-y;
         }
@@ -64,8 +64,9 @@
                         <p class="lead">Unfortunately, your current IP Address indicates your geolocation is a restricted jurisdiction. </p>
                         <p>As such, we are unable to offer you an entertainment experience on the platform. </p>
                         <p>If you believe this is an error, please contact <a href="mailto:support@eightstorm.com">customer service</a>. </p>
-                        <p><a href="https://www.facebook.com/eightstormcasino"><img src="https://unavailable.globalodds.com/assets/img/fb.jpeg"></a>&nbsp;&nbsp;
-                            <a href="https://www.instagram.com/eightstormcasino"><img src="https://unavailable.globalodds.com/assets/img/ib.jpeg"></a>
+                        <p>
+                            <a href="https://www.facebook.com/eightstormcasino"><img src="assets/img/fb.jpeg"></a>&nbsp;&nbsp;
+                            <a href="https://www.instagram.com/eightstormcasino"><img src="assets/img/ib.jpeg"></a>
                         </p>
                     </td>
                 </tr>
