Updated CF pages

--- a/captcha-errors.html
+++ b/captcha-errors.html
@@ -61,17 +61,19 @@
             <tbody>
                 <tr>
                     <td>
-                        <p>We are unable to offer you an entertainment experience on the platform. </p>
-                        <p>If you believe this is an error, please contact <a href="mailto:support@eightstorm.com">customer service</a>. </p>
-                        <p>
-                            <a href="https://www.facebook.com/eightstormcasino"><img src="assets/img/fb.jpeg"></a>&nbsp;&nbsp;
-                            <a href="https://www.instagram.com/eightstormcasino"><img src="assets/img/ib.jpeg"></a>
-                        </p>
+                        <p>Please confirm before proceeding</p>
+                        <p style="text-align: center;">::CAPTCHA_BOX::</p>
+
                     </td>
                 </tr>
                 <tr>
                     <td class="tg-oe15">
-                        <p style="text-align: center;"><small>::CLOUDFLARE_ERROR_1000S_BOX::</small></p>
+                        <p>If you believe this is an error, please contact <a href="mailto:support@eightstorm.com">customer service</a>. </p>
+
+                        <p>
+                            <a href="https://www.facebook.com/eightstormcasino"><img src="assets/img/fb.jpeg"></a>&nbsp;&nbsp;
+                            <a href="https://www.instagram.com/eightstormcasino"><img src="assets/img/ib.jpeg"></a>
+                        </p>
                     </td>
                 </tr>
             </tbody>
