--- a/always-online-errors.html
+++ b/always-online-errors.html
@@ -61,7 +61,7 @@
             <tbody>
                 <tr>
                     <td>
-                        <p>We are unable to offer you an entertainment experience on the platform. </p>
+                        <p>We are unable to offer you an online entertainment experience</p>
                         <p>If you believe this is an error, please contact <a href="mailto:support@eightstorm.com">customer service</a>. </p>
                         <p>
                             <a href="https://www.facebook.com/eightstormcasino"><img src="assets/img/fb.jpeg"></a>&nbsp;&nbsp;
@@ -71,7 +71,7 @@
                 </tr>
                 <tr>
                     <td class="tg-oe15">
-                        <p style="text-align: center;"><small>::CLOUDFLARE_ERROR_1000S_BOX::</small></p>
+                        <p style="text-align: center;"><small>::ALWAYS_ONLINE_NO_COPY_BOX::</small></p>
                     </td>
                 </tr>
             </tbody>
