Updated CF Pages

--- a/index-test.html
+++ b/index-test.html
@@ -64,18 +64,17 @@
                         <p class="lead">Unfortunately, your current IP Address indicates your geolocation is a restricted jurisdiction. </p>
                         <p>As such, we are unable to offer you an entertainment experience on the platform. </p>
                         <p>If you believe this is an error, please contact <a href="mailto:support@eightstorm.com">customer service</a>. </p>
-<<<<<<< HEAD
-                        <p>
+                        <<<<<<< HEAD <p>
                             <a href="https://www.facebook.com/eightstormcasino"><img src="assets/img/fb.jpeg"></a>&nbsp;&nbsp;
                             <a href="https://www.instagram.com/eightstormcasino"><img src="assets/img/ib.jpeg"></a>
-=======
-                        <p><a href="https://www.facebook.com/eightstormcasino"><img src="https://unavailable.globalodds.com/assets/img/fb.jpeg"></a>&nbsp;&nbsp;
+                            =======
+                            <p><a href="https://www.facebook.com/eightstormcasino"><img src="https://unavailable.globalodds.com/assets/img/fb.jpeg"></a>&nbsp;&nbsp;
 
-                            <a href="https://www.instagram.com/eightstormcasino"><img src="https://unavailable.globalodds.com/assets/img/ib.jpeg"></a>
-                            
-                             <a href="https://www.instagram.com/eightstormcasino"><img src="assets/img/ib.jpeg"></a>
->>>>>>> 40223bc4a89079ae66713c373e697d238f70a0fb
-                        </p>
+                                <a href="https://www.instagram.com/eightstormcasino"><img src="https://unavailable.globalodds.com/assets/img/ib.jpeg"></a>
+
+                                <a href="https://www.instagram.com/eightstormcasino"><img src="assets/img/ib.jpeg"></a>
+                                >>>>>>> 40223bc4a89079ae66713c373e697d238f70a0fb
+                            </p>
                     </td>
                 </tr>
                 <tr>
